tests/cases/meta/ok/item-macro-function-identity.ari
meta fn make_item(input: token_stream) -> token_stream {
}

make_item!(fn generated_value() -> i64 {
  return 21;
});

fn main() -> i64 {
  return generated_value() * 2;
}
