tests/cases/meta/errors/item-macro-unsupported-item.ari
meta fn make_item(input: token_stream) -> token_stream {
}

make_item!(mod Generated;);

fn main() -> i64 {
  return 0;
}
